Move to a gradle based build system
*Integrates to Open File Manager as a library that has activities
 and resources.
*May have some issues if built as a standalone application
 and has not yet been supported

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">Parchment</string>
+    <string name="parchment_app_name">Parchment</string>
     <string name="default_title">Parchment by n00bware</string>
     <string name="version_name">Ediddy Release</string>
     <string name="splash_label">splash_screen</string>
